btsync-gui (0.4-1) unstable; urgency=low

  * Implemented folder add routine (Closes #63)

 -- Leo Moll <leo.moll@yeasoft.com>  Sat, 22 Feb 2014 23:23:59 +0100

btsync-gui (0.3-1) unstable; urgency=low

  * The @contextmanager has been replaced completely by a brand new
    singleton implementation that fixes all reported issues and
    does not fail on first start (Closes #68)
  * Syntax error in exception handler of BtSyncApi produced a
    cascade of exceptions preventing application shutdown
  * Folder list will now be updated once per second
  * Application version is shown correctly

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 21 Feb 2014 23:12:59 +0100

btsync-gui (0.2-1) unstable; urgency=low

  * Improved exception handling in several situations
  * Implemented folder deletion (Closes #62)

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 21 Feb 2014 15:16:22 +0100

btsync-gui (0.1-1) unstable; urgency=low

  * First version with fully functional indicator (Closes #66),
    rudimentary application window listing folders (Closes #61) and
    and working preferences pane (Closes #65)

 -- Leo Moll <leo.moll@yeasoft.com>  Thu, 20 Feb 2014 22:39:01 +0100

btsync-gui (0.0-1) unstable; urgency=low

  * Initial revision - contains only the icons

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 16 Feb 2014 18:42:24 +0100