@@ -1,6 +1,9 @@
 btsync-gui (0.4-1) unstable; urgency=low
 
   * Implemented folder add routine (Closes #63)
+  * Implemented folder context menu with
+    - Copy secret
+    - Connect mobile device
 
  -- Leo Moll <leo.moll@yeasoft.com>  Sat, 22 Feb 2014 23:23:59 +0100
 
